--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "name": "skate-shop",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:introspect": "drizzle-kit introspect:pg",
+    "db:push": "drizzle-kit push:pg",
+    "db:migrate": "tsc src/db/migrate.ts",
+    "db:drop-migration": "drizzle-kit drop --config=drizzle.config.ts",
+    "db:seed": "ts-node src/db/seed.ts",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
@@ -18,9 +25,12 @@
     "@tailwindcss/typography": "^0.5.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "drizzle-kit": "^0.20.14",
     "drizzle-orm": "^0.30.8",
+    "nanoid": "^5.0.7",
     "next": "14.2.1",
     "next-themes": "^0.3.0",
+    "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2",
@@ -35,6 +45,7 @@
     "eslint-config-next": "14.2.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
