create schema & seed data: categories & subCategories

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "db:introspect": "drizzle-kit introspect:pg",
     "db:push": "drizzle-kit push:pg",
     "db:drop-migration": "drizzle-kit drop --config=drizzle.config.ts",
-    "db:seed": "tsc src/db/seed.ts"
+    "db:seed": "tsx src/db/seed.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
