--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.20.14",
     "drizzle-orm": "^0.30.8",
+    "embla-carousel-react": "^8.0.2",
     "nanoid": "^5.0.7",
     "next": "14.2.1",
     "next-themes": "^0.3.0",
