--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,16 @@
 /node_modules
 /.pnp
 .pnp.js
-.yarn/install-state.gz
 
 # testing
 /coverage
 
+# database
+
 # next.js
 /.next/
 /out/
+next-env.d.ts
 
 # production
 /build
@@ -24,15 +26,24 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
 # local env files
+# do not commit any .env files to git, except for the .env.example file. https://create.t3.gg/en/usage/env-variables#using-environment-variables
+.env
 .env*.local
+
+# web vitals
+.unlighthouse
+
+# external
+.react-email
 
 # vercel
 .vercel
 
 # typescript
+.contentlayer
 *.tsbuildinfo
-next-env.d.ts
 
 drizzle
