--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cHJpbWUtbWlubm93LTg5LmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_PFzD868H1tzAuMKKUyzxHnccm2xIBJoGsedL977fiU
 DATABASE_URL=postgresql://postgres:namkhanh@localhost:5432/vapeshop
+NEXT_PUBLIC_APP_URL=http://localhost:3000
