date range picker

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "rehype-autolink-headings": "^7.1.0",
