--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tailwindcss/typography": "^0.5.12",
+    "@tanstack/react-table": "^8.16.0",
     "@tremor/react": "^3.16.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
