--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@tailwindcss/typography": "^0.5.12",
     "@tanstack/react-table": "^8.16.0",
     "@tremor/react": "^3.16.0",
+    "@uploadthing/react": "^6.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
@@ -62,6 +63,7 @@
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.3",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-code-titles": "^1.2.0",
