--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.3",
+    "react-medium-image-zoom": "^5.2.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-code-titles": "^1.2.0",
     "rehype-pretty-code": "^0.13.1",
