uploaded file old way

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
     "react": "^18",
+    "react-cropper": "^2.3.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
