feat: BE for register email news

--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-email/components": "^0.0.16",
+    "@react-email/tailwind": "^0.0.15",
     "@tailwindcss/typography": "^0.5.12",
     "@tanstack/react-table": "^8.16.0",
     "@tremor/react": "^3.16.0",
@@ -65,6 +67,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-email": "^2.1.1",
     "react-hook-form": "^7.51.3",
     "react-medium-image-zoom": "^5.2.0",
     "rehype-autolink-headings": "^7.1.0",
@@ -75,6 +78,7 @@
     "remark-code-import": "^1.2.0",
     "remark-gfm": "^3.0.1",
     "remark-math": "^6.0.0",
+    "resend": "^3.2.0",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
