--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ yarn-error.log*
 # local env files
 # do not commit any .env files to git, except for the .env.example file. https://create.t3.gg/en/usage/env-variables#using-environment-variables
 .env
-.env*.local
+# .env*.local
 
 # web vitals
 .unlighthouse
@@ -47,4 +47,3 @@ yarn-error.log*
 *.tsbuildinfo
 
 drizzle
-.env
